<?xml version="1.0"?>
<package format="2">
  <name>md25_driver</name>
  <version>0.0.0</version>
  <description>A very simple, homemade robot.</description>
  <maintainer email="hunter@openrobotics.org">Hunter L. Allen</maintainer>
  <author email="hunter@openrobotics.org">Hunter L. Allen</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <exec_depend>roscpp</exec_depend>
</package>
